# so-arm101-policy-platform

./: .gitignore  README.md  pyproject.toml
configs/experiments/: red-cube-to-bowl-v1.json
docs/: ROADMAP.md
docs/decisions/: 0001-policy-and-gpu-strategy.md
docs/guides/: hardware-to-policy-playbook.md
docs/phases/: 00-foundation.md  01-hardware-calibration-teleoperation.md  02-record-and-inspect-dataset.md
docs/superpowers/plans/: 2026-07-16-local-mock-policy-worker.md  2026-07-16-phase-0-foundation.md  2026-07-20-name-resolved-camera-preview.md
docs/superpowers/specs/: 2026-07-16-so-arm101-policy-platform-design.md  2026-07-16-so101-policy-platform-design.md  2026-07-20-name-resolved-camera-preview-design.md
reports/phase-0/: local-inventory.json
scripts/: __init__.py  phase0_probe.py  preview_camera.py
tests/: test_phase0_probe.py  test_preview_camera.py
