[project]
name = "so-arm101-learning-lab"
version = "0.1.0"
description = "Reproducible SO-ARM101 SmolVLA learning environment"
requires-python = ">=3.12,<3.13"
dependencies = [
  "lerobot[core_scripts,feetech]==0.6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
